--- a/.github/workflows/auto_surge.yml
+++ b/.github/workflows/auto_surge.yml
@@ -23,13 +23,11 @@ jobs:
     # Runs a single command using the runners shell
     - name: Inatalling Node
       uses : actions/setup-node@v2-beta
-      with:
-        node-version: 12
+      with : 
+        node-version: 12   
 
     # Runs a set of commands using the runners shell
     - name: Installing Surge
       run: npm install --global surge
       name : deploying using surge
-      run : surge./freelancing-bootcamp-2020.surge.sh --token {{ secrets.SURGE_TOKEN }}
-        echo Add other actions to build,
-        echo test, and deploy your project.
+      run : surge ./ freelancing-bootcamp-2020.surge.sh --token {{ secrets.SURGE_TOKEN }}
