--- a/.github/workflows/auto_surge.yml
+++ b/.github/workflows/auto_surge.yml
@@ -22,12 +22,12 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Inatalling Node
-      uses : actions/setup-node@v2-beta
-      with : 
+      uses: actions/setup-node@v2-beta
+      with: 
         node-version: 12   
 
     # Runs a set of commands using the runners shell
     - name: Installing Surge
       run: npm install --global surge
-      name : deploying using surge
-      run : surge ./ freelancing-bootcamp-2020.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+    - name: deploying using surge
+      run: surge ./ freelancing-bootcamp-2020.surge.sh --token ${{ secrets.SURGE_TOKEN }}
